--- a/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
+++ b/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
@@ -51,6 +51,21 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </VBox>
+      <HBox alignment="TOP_CENTER">
+         <children>
+            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
+               <padding>
+                  <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
+               </padding>
+               <font>
+                  <Font name="Arial Bold" size="14.0" />
+               </font>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="15.0" top="15.0" />
+         </padding>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
