--- a/src/main/resources/group57/emrsystem/login.fxml
+++ b/src/main/resources/group57/emrsystem/login.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="720.0" prefWidth="1080.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group57.emrsystem.HelloController">
+<VBox alignment="CENTER" prefHeight="720.0" prefWidth="1080.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group57.emrsystem.HelloController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" orientation="VERTICAL" rowValignment="TOP" style="-fx-background-color: white;" vgap="30.0" VBox.vgrow="ALWAYS">
          <children>
@@ -26,7 +23,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="usernameField">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
@@ -43,7 +40,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="passwordField">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
@@ -55,7 +52,7 @@
                   </VBox>
                </children>
             </VBox>
-            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Login" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="loginButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Login" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                </padding>
