--- a/src/main/resources/group57/emrsystem/patient-admin.fxml
+++ b/src/main/resources/group57/emrsystem/patient-admin.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane>
         <columnConstraints>
@@ -31,7 +24,7 @@
             </Label>
             <HBox spacing="15.0" GridPane.columnIndex="2">
                <children>
-                   <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
+                   <Button fx:id="addRecordButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
                        <padding>
                            <Insets bottom="10.0" left="25.0" right="25.0" top="10.0" />
                        </padding>
@@ -39,7 +32,7 @@
                            <Font name="Arial Bold" size="14.0" />
                        </font>
                    </Button>
-                   <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: red; -fx-border-style: dashed;" text="Logout" textAlignment="CENTER" textFill="#ff3d3d">
+                   <Button fx:id="logoutButtonAdmin" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: red; -fx-border-style: dashed;" text="Logout" textAlignment="CENTER" textFill="#ff3d3d">
                        <padding>
                            <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                        </padding>
@@ -54,7 +47,7 @@
             <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
          </padding>
       </GridPane>
-      <TableView>
+      <TableView fx:id="displayTable">
         <columns>
           <TableColumn prefWidth="75.0" text="National ID" />
           <TableColumn prefWidth="75.0" text="Name" />
