--- a/src/main/resources/group57/emrsystem/newprocedureandmedicine.fxml
+++ b/src/main/resources/group57/emrsystem/newprocedureandmedicine.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Add New Procedure/Medicine">
          <font>
@@ -18,7 +19,7 @@
       <VBox>
          <children>
             <Label text="Date" />
-            <TextField>
+            <TextField id="textdateprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -30,7 +31,7 @@
       <VBox layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Time" />
-            <TextField>
+            <TextField id="texttimeprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -42,7 +43,7 @@
       <VBox layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="Procedure Type" />
-            <TextField>
+            <TextField id="textproceduretypeprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -54,7 +55,7 @@
       <VBox layoutX="25.0" layoutY="155.0">
          <children>
             <Label text="Medication" />
-            <TextField>
+            <TextField id="textmedicationprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -66,7 +67,7 @@
       <VBox layoutX="25.0" layoutY="207.0">
          <children>
             <Label text="Amount" />
-            <TextField>
+            <TextField id="textamountprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -78,7 +79,7 @@
       <VBox layoutX="25.0" layoutY="259.0">
          <children>
             <Label text="Frequency" />
-            <TextField>
+            <TextField id="textfrequencyprocedure">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -89,7 +90,7 @@
       </VBox>
       <HBox alignment="TOP_CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
+            <Button id="savebuttonprocedure" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                </padding>
@@ -107,3 +108,4 @@
       <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
    </padding>
 </VBox>
+
