--- a/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
+++ b/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
@@ -18,7 +18,7 @@
       <VBox>
          <children>
             <Label text="Treatment" />
-            <TextField>
+            <TextField fx:id="treatment_textfield">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -30,7 +30,7 @@
       <VBox layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Start Date" />
-            <TextField>
+            <TextField fx:id="start_date_textfield">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -42,7 +42,7 @@
       <VBox layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="End Date" />
-            <TextField>
+            <TextField fx:id="end_date_textfield">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -53,7 +53,7 @@
       </VBox>
       <HBox alignment="TOP_CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="save_button" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                </padding>
