--- a/src/main/resources/group57/emrsystem/medicalhistory-admin.fxml
+++ b/src/main/resources/group57/emrsystem/medicalhistory-admin.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane>
             <columnConstraints>
@@ -31,7 +24,7 @@
                 </Label>
                 <HBox spacing="15.0" GridPane.columnIndex="2">
                     <children>
-                        <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="AdminAddRecordButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
                             <padding>
                                 <Insets bottom="10.0" left="25.0" right="25.0" top="10.0" />
                             </padding>
@@ -46,16 +39,16 @@
                 <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
             </padding>
         </GridPane>
-        <TableView>
+        <TableView fx:id="AdminTableView">
             <columns>
-                <TableColumn prefWidth="75.0" text="Date" />
-                <TableColumn prefWidth="75.0" text="Time" />
-                <TableColumn prefWidth="75.0" text="Ward" />
-                <TableColumn prefWidth="75.0" text="Treatment Results" />
-                <TableColumn prefWidth="75.0" text="Observation" />
-                <TableColumn prefWidth="75.0" text="Major Complications" />
-                <TableColumn prefWidth="75.0" text="Attending Doctor/Nurse" />
-            <TableColumn prefWidth="75.0" text="Actions" />
+                <TableColumn fx:id="AdminDateColumn" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="AdminTimeColumn" prefWidth="75.0" text="Time" />
+                <TableColumn fx:id="AdminWardColumn" prefWidth="75.0" text="Ward" />
+                <TableColumn fx:id="AdminTreatmentResultsColumn" prefWidth="75.0" text="Treatment Results" />
+                <TableColumn fx:id="AdminObservationColumn" prefWidth="75.0" text="Observation" />
+                <TableColumn fx:id="AdminMajorComplicationsColumn" prefWidth="75.0" text="Major Complications" />
+                <TableColumn fx:id="AdminAttendingDoctorColumn" prefWidth="75.0" text="Attending Doctor/Nurse" />
+                <TableColumn fx:id="AdminActionsColumn" prefWidth="75.0" text="Actions" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
