--- a/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
+++ b/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
@@ -39,7 +39,7 @@
                 <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
             </padding>
         </GridPane>
-        <TableView fx:id="AdminTableView">
+        <TableView fx:id="DiagnosisAdminTableView">
             <columns>
                 <TableColumn prefWidth="75.0" text="Date" />
                 <TableColumn prefWidth="75.0" text="Name" />
