--- a/src/main/resources/group57/emrsystem/diagnosis-user.fxml
+++ b/src/main/resources/group57/emrsystem/diagnosis-user.fxml
@@ -28,11 +28,11 @@
                 <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
             </padding>
         </GridPane>
-        <TableView fx:id="UserTableView">
+        <TableView fx:id="DiagnosisUserTableView">
             <columns>
-                <TableColumn prefWidth="75.0" text="Date" />
-                <TableColumn prefWidth="75.0" text="Name" />
-                <TableColumn prefWidth="75.0" text="Diagnosed Sickness" />
+                <TableColumn fx:id="DIagnosisUserDateColumn" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="DiagnosisUserNameColumn" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="DiagnosisUserDiagnosedSicknessColumn" prefWidth="75.0" text="Diagnosed Sickness" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
