--- a/src/main/resources/group57/emrsystem/newdiagnosis.fxml
+++ b/src/main/resources/group57/emrsystem/newdiagnosis.fxml
@@ -15,10 +15,10 @@
             <Insets bottom="10.0" />
          </padding>
       </Label>
-      <VBox>
+      <VBox fx:id="DiagnosiDateTextField">
          <children>
             <Label text="Date" />
-            <TextField>
+            <TextField fx:id="DateTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -27,10 +27,10 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox layoutX="25.0" layoutY="51.0">
+      <VBox fx:id="DiagnosisNameTextField" layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Name" />
-            <TextField>
+            <TextField fx:id="NameTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -39,10 +39,10 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox layoutX="25.0" layoutY="103.0">
+      <VBox fx:id="DiagnosisDiagnosedSicknessTextField" layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="Diagnosed Sickness" />
-            <TextField>
+            <TextField fx:id="DiagnosedSicknessTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -53,7 +53,7 @@
       </VBox>
       <HBox alignment="TOP_CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="DiagnosisSaveButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                </padding>
