--- a/src/main/resources/group57/emrsystem/newmedicalhistory.fxml
+++ b/src/main/resources/group57/emrsystem/newmedicalhistory.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Add New Medical History">
          <font>
@@ -18,7 +21,7 @@
       <VBox>
          <children>
             <Label text="Date" />
-            <TextField>
+            <TextField fx:id="MedHisDateTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -30,7 +33,7 @@
       <VBox layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Time" />
-            <TextField>
+            <TextField fx:id="MedHisTimeTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -42,7 +45,7 @@
       <VBox layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="Ward" />
-            <TextField>
+            <TextField fx:id="MedHisWardTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -54,7 +57,7 @@
       <VBox layoutX="25.0" layoutY="155.0">
          <children>
             <Label text="Treatment Results" />
-            <TextField>
+            <TextField fx:id="MedHisTreatmentResultsTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -66,7 +69,7 @@
       <VBox layoutX="25.0" layoutY="207.0">
          <children>
             <Label text="Observation" />
-            <TextField>
+            <TextField fx:id="MedHisObservationTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -78,7 +81,7 @@
       <VBox layoutX="25.0" layoutY="259.0">
          <children>
             <Label text="Major Complications" />
-            <TextField>
+            <TextField fx:id="MedHisMajorComplicationsTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -90,7 +93,7 @@
       <VBox layoutX="25.0" layoutY="311.0">
          <children>
             <Label text="Attending Doctor/Nurse" />
-            <TextField>
+            <TextField fx:id="MedHisAttendingDoctorTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -101,7 +104,7 @@
       </VBox>
       <HBox alignment="TOP_CENTER">
          <children>
-            <Button defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="MedHisSaveButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Save" textAlignment="CENTER" textFill="WHITE">
                <padding>
                   <Insets bottom="10.0" left="35.0" right="35.0" top="10.0" />
                </padding>
