--- a/src/main/resources/group57/emrsystem/newdiagnosis.fxml
+++ b/src/main/resources/group57/emrsystem/newdiagnosis.fxml
@@ -18,7 +18,7 @@
       <VBox fx:id="DiagnosiDateTextField">
          <children>
             <Label text="Date" />
-            <TextField fx:id="DateTextField">
+            <TextField fx:id="DiagnosisDateTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -30,7 +30,7 @@
       <VBox fx:id="DiagnosisNameTextField" layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Name" />
-            <TextField fx:id="NameTextField">
+            <TextField fx:id="DiagnosisNameTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
@@ -42,7 +42,7 @@
       <VBox fx:id="DiagnosisDiagnosedSicknessTextField" layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="Diagnosed Sickness" />
-            <TextField fx:id="DiagnosedSicknessTextField">
+            <TextField fx:id="DiagnosisDiagnosedSicknessTextField">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
