--- a/src/main/resources/group57/emrsystem/treatmentcourse-user.fxml
+++ b/src/main/resources/group57/emrsystem/treatmentcourse-user.fxml
@@ -30,10 +30,10 @@
         </GridPane>
         <TableView fx:id="treatment_user_table">
             <columns>
-                <TableColumn prefWidth="75.0" text="Treatment" />
-                <TableColumn prefWidth="75.0" text="Start Date" />
-                <TableColumn prefWidth="75.0" text="End Date" />
-            <TableColumn prefWidth="75.0" text="Actions" />
+                <TableColumn fx:id="treatment_user_treatment" prefWidth="75.0" text="Treatment" />
+                <TableColumn fx:id="treatment_user_start_date" prefWidth="75.0" text="Start Date" />
+                <TableColumn fx:id="treatment_user_end_date" prefWidth="75.0" text="End Date" />
+            <TableColumn fx:id="treatment_user_actions" prefWidth="75.0" text="Actions" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
