--- a/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
+++ b/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
@@ -24,7 +24,7 @@
                 </Label>
                 <HBox spacing="15.0" GridPane.columnIndex="2">
                     <children>
-                        <Button fx:id="AdminAddRecordButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="DiagnosisAdminAddRecordButton" defaultButton="true" mnemonicParsing="false" style="-fx-background-color: #1890FF;" text="Add Record" textAlignment="CENTER" textFill="WHITE">
                             <padding>
                                 <Insets bottom="10.0" left="25.0" right="25.0" top="10.0" />
                             </padding>
@@ -41,9 +41,9 @@
         </GridPane>
         <TableView fx:id="DiagnosisAdminTableView">
             <columns>
-                <TableColumn prefWidth="75.0" text="Date" />
-                <TableColumn prefWidth="75.0" text="Name" />
-                <TableColumn prefWidth="75.0" text="Diagnosed Sickness" />
+                <TableColumn fx:id="DiagnosisUserDateColumn" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="DiagnosisUserNameColumn" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="DiagnosisUserDiagnosedSicknessColumn" prefWidth="75.0" text="Diagnosed Sickness" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
