--- a/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
+++ b/src/main/resources/group57/emrsystem/diagnosis-admin.fxml
@@ -44,6 +44,7 @@
                 <TableColumn fx:id="DiagnosisUserDateColumn" prefWidth="75.0" text="Date" />
                 <TableColumn fx:id="DiagnosisUserNameColumn" prefWidth="75.0" text="Name" />
                 <TableColumn fx:id="DiagnosisUserDiagnosedSicknessColumn" prefWidth="75.0" text="Diagnosed Sickness" />
+                <TableColumn fx:id="DiagnosisUseActions" prefWidth="75.0" text="Actions" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
