NewDiagnosisController added, some changes to to diagnosis, hopefully this works -Billy

--- a/src/main/resources/group57/emrsystem/medicalhistory-user.fxml
+++ b/src/main/resources/group57/emrsystem/medicalhistory-user.fxml
@@ -30,14 +30,14 @@
         </GridPane>
         <TableView fx:id="MedHisUserTableView">
             <columns>
-                <TableColumn fx:id="UserDateColumn" prefWidth="75.0" text="Date" />
-                <TableColumn fx:id="UserTimeColumn" prefWidth="75.0" text="Time" />
-                <TableColumn fx:id="UserWardColumn" prefWidth="75.0" text="Ward" />
-                <TableColumn fx:id="UserTreatmentResultsColumn" prefWidth="75.0" text="Treatment Results" />
-                <TableColumn fx:id="UserObservationsColumn" prefWidth="75.0" text="Observation" />
-                <TableColumn fx:id="UserMajorComplicationsColumn" prefWidth="75.0" text="Major Complications" />
-                <TableColumn fx:id="UserAttendingDoctorColumn" prefWidth="75.0" text="Attending Doctor/Nurse" />
-                <TableColumn fx:id="UserActionsColumn" prefWidth="75.0" text="Actions" />
+                <TableColumn fx:id="MedHisUserDateColumn" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="MedHisUserTimeColumn" prefWidth="75.0" text="Time" />
+                <TableColumn fx:id="MedHisUserWardColumn" prefWidth="75.0" text="Ward" />
+                <TableColumn fx:id="MedHisUserTreatmentResultsColumn" prefWidth="75.0" text="Treatment Results" />
+                <TableColumn fx:id="MedHisUserObservationsColumn" prefWidth="75.0" text="Observation" />
+                <TableColumn fx:id="MedHisUserMajorComplicationsColumn" prefWidth="75.0" text="Major Complications" />
+                <TableColumn fx:id="MedHisUserAttendingDoctorColumn" prefWidth="75.0" text="Attending Doctor/Nurse" />
+                <TableColumn fx:id="MedHisUserActionsColumn" prefWidth="75.0" text="Actions" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
