--- a/src/main/resources/group57/emrsystem/medicalhistory-admin.fxml
+++ b/src/main/resources/group57/emrsystem/medicalhistory-admin.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane>
             <columnConstraints>
@@ -48,13 +41,13 @@
         </GridPane>
         <TableView fx:id="MedHisAdminTableView">
             <columns>
-                <TableColumn fx:id="AdminDateColumn" prefWidth="75.0" text="Date" />
-                <TableColumn fx:id="AdminTimeColumn" prefWidth="75.0" text="Time" />
-                <TableColumn fx:id="AdminWardColumn" prefWidth="75.0" text="Ward" />
-                <TableColumn fx:id="AdminTreatmentResultsColumn" prefWidth="75.0" text="Treatment Results" />
-                <TableColumn fx:id="AdminObservationColumn" prefWidth="75.0" text="Observation" />
-                <TableColumn fx:id="AdminMajorComplicationsColumn" prefWidth="75.0" text="Major Complications" />
-                <TableColumn fx:id="AdminAttendingDoctorColumn" prefWidth="75.0" text="Attending Doctor/Nurse" />
+                <TableColumn fx:id="MedHisAdminDateColumn" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="MedHisAdminTimeColumn" prefWidth="75.0" text="Time" />
+                <TableColumn fx:id="MedHisAdminWardColumn" prefWidth="75.0" text="Ward" />
+                <TableColumn fx:id="MedHisAdminTreatmentResultsColumn" prefWidth="75.0" text="Treatment Results" />
+                <TableColumn fx:id="MedHisAdminObservationColumn" prefWidth="75.0" text="Observation" />
+                <TableColumn fx:id="MedHisAdminMajorComplicationsColumn" prefWidth="75.0" text="Major Complications" />
+                <TableColumn fx:id="MedHisAdminAttendingDoctorColumn" prefWidth="75.0" text="Attending Doctor/Nurse" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
