--- a/src/main/resources/group57/emrsystem/procedureandmedicine-user.fxml
+++ b/src/main/resources/group57/emrsystem/procedureandmedicine-user.fxml
@@ -29,15 +29,14 @@
                 <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
             </padding>
         </GridPane>
-        <TableView id="tableuser">
+        <TableView fx:id="tableuser">
             <columns>
-                <TableColumn prefWidth="75.0" text="Date" />
-                <TableColumn prefWidth="75.0" text="Time" />
-                <TableColumn prefWidth="75.0" text="Procedure Type" />
-            <TableColumn prefWidth="75.0" text="Medication" />
-            <TableColumn prefWidth="75.0" text="Amount" />
-            <TableColumn prefWidth="75.0" text="Frequency" />
-            <TableColumn prefWidth="75.0" text="Actions" />
+                <TableColumn fx:id="table_date_procedure" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="table_time_procedure" prefWidth="75.0" text="Time" />
+                <TableColumn fx:id="table_type_procedure" prefWidth="75.0" text="Procedure Type" />
+            <TableColumn fx:id="table_medication_procedure" prefWidth="75.0" text="Medication" />
+            <TableColumn fx:id="table_amount_procedure" prefWidth="75.0" text="Amount" />
+            <TableColumn fx:id="table_frequency_procedure" prefWidth="75.0" text="Frequency" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
