--- a/src/main/resources/group57/emrsystem/treatmentcourse-admin.fxml
+++ b/src/main/resources/group57/emrsystem/treatmentcourse-admin.fxml
@@ -41,9 +41,9 @@
         </GridPane>
         <TableView fx:id="treatment_admin_table">
             <columns>
-                <TableColumn fx:id="treatment_user_treatment" prefWidth="75.0" text="Treatment" />
-                <TableColumn fx:id="treatment_user_start_date" prefWidth="75.0" text="Start Date" />
-                <TableColumn fx:id="treatment_user_end_date" prefWidth="75.0" text="End Date" />
+                <TableColumn fx:id="treatment_admin_treatment" prefWidth="75.0" text="Treatment" />
+                <TableColumn fx:id="treatment_admin_start_date" prefWidth="75.0" text="Start Date" />
+                <TableColumn fx:id="treatment_admin_end_date" prefWidth="75.0" text="End Date" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
